--- a/bin/reth-bench-compare/Cargo.toml
+++ b/bin/reth-bench-compare/Cargo.toml
@@ -28,6 +28,7 @@ alloy-provider = { workspace = true, features = ["reqwest-rustls-tls"], default-
 alloy-rpc-client = { workspace = true, features = ["pubsub"] }
 alloy-rpc-types-eth.workspace = true
 alloy-transport-ws.workspace = true
+alloy-primitives.workspace = true
 
 # CLI and argument parsing
 clap = { workspace = true, features = ["derive", "env"] }
