--- a/crates/trie/parallel/Cargo.toml
+++ b/crates/trie/parallel/Cargo.toml
@@ -19,6 +19,7 @@ reth-provider.workspace = true
 reth-storage-errors.workspace = true
 reth-trie-common.workspace = true
 reth-trie-sparse = { workspace = true, features = ["std"] }
+reth-tasks = { workspace = true, features = ["rayon"] }
 reth-trie.workspace = true
 
 # alloy
