fix: unset RUSTC_WRAPPER in detect jobs
cargo-rail needs to run cargo metadata which fails when sccache
is not installed but RUSTC_WRAPPER is set

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -25,6 +25,8 @@ jobs:
     name: detect affected crates
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
+    env:
+      RUSTC_WRAPPER: ""
     outputs:
       cargo-args: ${{ steps.rail.outputs.cargo-args }}
       count: ${{ steps.rail.outputs.count }}
