ci: use depot for hive and kurtosis image builds
Switch prepare-reth.yml from docker/build-push-action with
cargo-chef (hive Dockerfile) to depot/bake-action with
Dockerfile.depot and sccache for faster, cached builds.

Add hive-stable, hive-edge, and kurtosis targets to
docker-bake.hcl using the hivetests build profile.

--- a/.github/workflows/hive.yml
+++ b/.github/workflows/hive.yml
@@ -18,18 +18,16 @@ jobs:
   prepare-reth-stable:
     uses: ./.github/workflows/prepare-reth.yml
     with:
-      image_tag: ghcr.io/paradigmxyz/reth:latest
-      binary_name: reth
-      cargo_features: "asm-keccak"
+      hive_target: hive-stable
       artifact_name: "reth-stable"
+    secrets: inherit
 
   prepare-reth-edge:
     uses: ./.github/workflows/prepare-reth.yml
     with:
-      image_tag: ghcr.io/paradigmxyz/reth:latest
-      binary_name: reth
-      cargo_features: "asm-keccak edge"
+      hive_target: hive-edge
       artifact_name: "reth-edge"
+    secrets: inherit
 
   prepare-hive:
     if: github.repository == 'paradigmxyz/reth'
