--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -14,7 +14,7 @@ on:
         description: "Name for the uploaded artifact"
 
 jobs:
-  prepare-reth:
+  build:
     if: github.repository == 'paradigmxyz/reth'
     timeout-minutes: 45
     runs-on: ubuntu-24.04
