--- a/crates/tasks/Cargo.toml
+++ b/crates/tasks/Cargo.toml
@@ -13,7 +13,7 @@ workspace = true
 
 [dependencies]
 # async
-tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread"] }
+tokio = { workspace = true, features = ["sync", "rt"] }
 tracing-futures.workspace = true
 futures-util = { workspace = true, features = ["std"] }
 
@@ -36,4 +36,4 @@ tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "time",
 
 [features]
 rayon = ["dep:rayon", "pin-project"]
-test-utils = []
+test-utils = ["tokio/rt-multi-thread"]
