--- a/Cargo.toml
+++ b/Cargo.toml
@@ -803,19 +803,19 @@ ipnet = "2.11"
 # =============================================================================
 
 # revm staging patches
-revm = { git = "https://github.com/Rimeeeeee/revm", branch = "main" }
-revm-bytecode = { git = "https://github.com/Rimeeeeee/revm", branch = "main" }
-revm-database = { git = "https://github.com/Rimeeeeee/revm", branch = "main" }
-revm-database-interface = { git = "https://github.com/Rimeeeeee/revm", branch = "main" }
-revm-state = { git = "https://github.com/Rimeeeeee/revm", branch = "main" }
-revm-primitives = { git = "https://github.com/Rimeeeeee/revm", branch = "main" }
-revm-interpreter = { git = "https://github.com/Rimeeeeee/revm", branch = "main" }
-revm-precompile = { git = "https://github.com/Rimeeeeee/revm", branch = "main" }
-revm-context = { git = "https://github.com/Rimeeeeee/revm", branch = "main" }
-revm-context-interface = { git = "https://github.com/Rimeeeeee/revm", branch = "main" }
-revm-handler = { git = "https://github.com/Rimeeeeee/revm", branch = "main" }
-revm-inspector = { git = "https://github.com/Rimeeeeee/revm", branch = "main" }
-op-revm = { git = "https://github.com/Rimeeeeee/revm", branch = "main" }
+revm = { git = "https://github.com/bluealloy/revm", branch = "expose-gas" }
+revm-bytecode = { git = "https://github.com/bluealloy/revm", branch = "expose-gas" }
+revm-database = { git = "https://github.com/bluealloy/revm", branch = "expose-gas" }
+revm-database-interface = { git = "https://github.com/bluealloy/revm", branch = "expose-gas" }
+revm-state = { git = "https://github.com/bluealloy/revm", branch = "expose-gas" }
+revm-primitives = { git = "https://github.com/bluealloy/revm", branch = "expose-gas" }
+revm-interpreter = { git = "https://github.com/bluealloy/revm", branch = "expose-gas" }
+revm-precompile = { git = "https://github.com/bluealloy/revm", branch = "expose-gas" }
+revm-context = { git = "https://github.com/bluealloy/revm", branch = "expose-gas" }
+revm-context-interface = { git = "https://github.com/bluealloy/revm", branch = "expose-gas" }
+revm-handler = { git = "https://github.com/bluealloy/revm", branch = "expose-gas" }
+revm-inspector = { git = "https://github.com/bluealloy/revm", branch = "expose-gas" }
+op-revm = { git = "https://github.com/bluealloy/revm", branch = "expose-gas" }
 revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors", branch = "staging" }
 
 # alloy-evm bal-devnet2 patches
